# dysk_c

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: colors.c  colors.h  main.c  str_utils.c  str_utils.h
